[package]
name = "l2perf"
version = "0.1.0"
authors = ["Vzaa <Vzaa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.35"
structopt = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
